# scaffold

./: LICENSE  README.md  mkproject  scaffold
assets/repomix/: instructions.md  repomix.config.json
templates/python/fastapi/: .gitignore  pyproject.toml  setup.sh
templates/python/fastapi/src/app/: main.py
templates/python/standard/: .pre-commit-config.yaml  pyproject.toml
templates/python/standard/src/app/: main.py
templates/python/standard/src/utils/: config_manager.py  db.py  env_utils.py  logger.py
templates/python/standard/tests/: test_main.py
